syntax = "proto3";
package eightball.eightball;

option go_package = "eightball/x/eightball/types";

message HighCouncilConjurings {
  uint64 id = 1;
  uint64 magicKeyId = 2; 
  uint64 blockStarted = 3; 
}
